# EMail-Ops-MCP

./: .gitignore  README.md  build_backend.py  pyproject.toml  setup.py
references/: providers.md  storage.md  writing-style.md
src/email_ops/: __init__.py  __main__.py  config.py  mcp_server.py
src/email_ops/application/: __init__.py  account_service.py  message_service.py
src/email_ops/domain/: __init__.py  errors.py  models.py  providers.py
src/email_ops/infrastructure/: __init__.py  config_store.py  mail_transport.py
src/email_ops/interfaces/: __init__.py  mcp_server.py
tests/: test_email_ops.py
